--- a/SWAI_UI_20200120/UI_presentation_1/UI_presentation_1/Cells/CustomCell.xib
+++ b/SWAI_UI_20200120/UI_presentation_1/UI_presentation_1/Cells/CustomCell.xib
@@ -10,20 +10,20 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="49" id="KGk-i7-Jjw" customClass="CustomCell" customModule="SleepWithAI" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2oG-SK-j5N">
-                        <rect key="frame" x="16" y="16" width="42" height="17"/>
+                        <rect key="frame" x="139" y="10" width="42" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FjW-Jd-cwf">
-                        <rect key="frame" x="262" y="14" width="42" height="21"/>
+                        <rect key="frame" x="262" y="64.5" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -31,11 +31,9 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="FjW-Jd-cwf" secondAttribute="trailing" constant="16" id="AW1-Pz-1Tu"/>
-                    <constraint firstItem="2oG-SK-j5N" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="J4B-dI-DHX"/>
-                    <constraint firstItem="2oG-SK-j5N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="Xjf-UC-7IT"/>
-                    <constraint firstItem="2oG-SK-j5N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="ZkP-Rd-I69"/>
+                    <constraint firstItem="2oG-SK-j5N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="UbQ-Oe-CNi"/>
+                    <constraint firstItem="2oG-SK-j5N" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="XgN-su-qoe"/>
                     <constraint firstItem="FjW-Jd-cwf" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="cuz-N8-4wt"/>
-                    <constraint firstAttribute="bottom" secondItem="2oG-SK-j5N" secondAttribute="bottom" constant="16" id="h93-FD-FAz"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
